--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -30,12 +30,12 @@
                         <strong class="text-primary">{{currentCourse.fHorCou}}</strong>
                     </div>
                     <div>
-                        <span>Fee</span>
+                        <span>Preço</span>
                         <br>
                         <strong class="text-primary">R${{currentCourse.fPriCou}}</strong>
                     </div>
                     <div>
-                        <button kendo-button (click)="pdf.saveAs('invoice.pdf')" class="btn btn-primary">Gerar
+                        <button kendo-button (click)="pdf.saveAs('Certificado.pdf')" class="btn btn-primary">Gerar
                             Certificado</button>
 
                     </div>
@@ -54,7 +54,7 @@
     <kendo-pdf-export #pdf paperSize="A4" margin="2cm">
         <div class="row mt-60">
             <div class="col-lg-4">
-                <p>Average Pass Rate</p>
+                <p>Dificuldade</p>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
                         style="width: 90%;">
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="col-lg-4">
-                <p>Level of Hardness</p>
+                <p>Progresso</p>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
                         style="width: 80%;">
@@ -85,6 +85,8 @@
 
 
 
+    <!-- única parte que ainda não está dinâmica -->
+
     <section class="container mt-100 mb-100">
         <div class="row">
             <div class="col-lg-12">
@@ -94,23 +96,23 @@
                 <ul class="nav nav-pills flex-column" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" href="#t3body1" aria-controls="t3body1" role="tab" data-toggle="tab"><i
-                                class="fa fa-futbol-o fa-fw"></i> Fun at School</a>
+                            class="fa fa-graduation-cap fa-fw"></i>Atividade 1</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#t3body2" aria-controls="t3body2" role="tab" data-toggle="tab"><i
-                                class="fa fa-university fa-fw"></i> Organic Food</a>
+                            class="fa fa-graduation-cap fa-fw"></i> Atividade 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#t3body3" aria-controls="t3body3" role="tab" data-toggle="tab"><i
-                                class="fa fa-flask fa-fw"></i> Laboratories</a>
+                            class="fa fa-graduation-cap fa-fw"></i> Atividade 3</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#t3body4" aria-controls="t3body4" role="tab" data-toggle="tab"><i
-                                class="fa fa-graduation-cap fa-fw"></i> Successful Students</a>
+                                class="fa fa-graduation-cap fa-fw"></i> Atividade 4</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#t3body5" aria-controls="t3body5" role="tab" data-toggle="tab"><i
-                                class="fa fa-graduation-cap fa-fw"></i> Successful Students</a>
+                                class="fa fa-graduation-cap fa-fw"></i> Atividade 5</a>
                     </li>
 
                 </ul>
@@ -157,23 +159,18 @@
                             unknown plants are noticed by me.</p>
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="t3body4">
-                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings
-                            of
-                            spring which I enjoy with my whole heart. I am alone, and feel the charm of existence
-                            in
-                            this spot, which was created for the bliss of souls like mine. I am so happy, my dear
-                            friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect
-                            my
-                            talents.</p>
-                        <p>I should be incapable of drawing a single stroke at the present moment; and yet I feel
-                            that
-                            I never was a greater artist than now. When, while the lovely valley teems with vapour
-                            around me, and the meridian sun strikes the upper surface of the impenetrable foliage
-                            of my
-                            trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down
-                            among
-                            the tall grass by the trickling stream; and, as I lie close to the earth, a thousand
-                            unknown plants are noticed by me.</p>
+                            <div *ngIf="isLoaded" style="text-align: center;">
+                                    <button (click)="prevPage()" [disabled]="page === 1">Prev</button>
+                                    <span>{{ page }} / {{ totalPages }}</span>
+                                    <button (click)="nextPage()" [disabled]="page === totalPages">Next</button>
+                                  </div>
+                                  
+                                  <pdf-viewer src="../../assets/pdf/reading_sample_sappress_1601_sap_hana_xsa.pdf"
+                                              [show-all]="false"
+                                              [page]="page"
+                                              (after-load-complete)="afterLoadComplete($event)"
+                                  ></pdf-viewer>
+                            <!-- <pdf-viewer src="../../assets/pdf/reading_sample_sappress_1601_sap_hana_xsa.pdf"></pdf-viewer> -->
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="t3body5">
                         <section class="container mt-40 mb-40">
