--- a/src/app/course-general/create-course/create-course.component.html
+++ b/src/app/course-general/create-course/create-course.component.html
@@ -160,6 +160,21 @@
                     <span style="color: red;" *ngIf="showDescRequiredError">Descrição é obrigatório.</span>
                 </div>
 
+                <div class="form-group row col-lg-6">
+                    <label for="message">Data Inicial</label>
+                    <span style="color: red;">*</span>
+                    <input type="date" class="form-control" id="dDatCou" required [(ngModel)]="dataInicial" name="dDatCou">
+                    <span style="color: red;" *ngIf="showDateIniRequiredError">Seu animal, preste atenção..</span>
+                </div>
+
+                
+                <div class="form-group row col-lg-6">
+                    <label for="message">Data Fim</label>
+                    <span style="color: red;">*</span>
+                    <input type="date" class="form-control" id="dDatCouFim" required [(ngModel)]="dataFim" name="dDatCouFim">
+                    <span style="color: red;" *ngIf="dataInicial > dataFim">Seu animal, preste atenção..</span>
+                </div>
+
                 <h2 class="heading mt-3 mb-3">Categorização do <span class="text-primary">Curso</span></h2>
                 <div class="form-group row col-lg-6">
                     <label for="categoria">Categoria</label>
