--- a/src/app/course-general/detail-course/detail-course.component.html
+++ b/src/app/course-general/detail-course/detail-course.component.html
@@ -78,7 +78,7 @@
         <div class="col-lg-3">
             <ul class="nav nav-pills flex-column" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link" id="act-{{i}}" href="#act-desc-{{i}}" aria-controls="act-desc-{{i}}" role="tab" data-toggle="tab">
+                    <a class="nav-link" id="act-desc-{{i}}" href="#act-desc-{{i}}" attr.aria-controls="act-desc-{{i}}" role="tab" data-toggle="tab">
                         <i class="fa fa-pencil"></i> 
                         <span>{{act.sNamAct}}</span>
                     </a>
